turtleart.lessons.turtleart.Main.HouseThree.scala.error
Source:14: error: not found: value i
		allerVers(30+i*20,0)
                             ^